<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/firstGroup"
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation1"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/firstMenuTitle" />

        <item
            android:id="@+id/navigation2"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/secondMenuTitle" />

        <item
            android:id="@+id/navigation3"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/thirdMenuTitle" />

        <item
            android:id="@+id/navigation4"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/fourthMenuTitle" />

        <item
            android:id="@+id/navigation5"
            android:checked="true"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/fifthMenuTitle" />

    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/sharable"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="Sharable" />

            <item
                android:id="@+id/drawable"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="Drawale" />
        </menu>
    </item>

    <item
        android:title="2nd group" >

        <menu
            android:id="@+id/SecondGroup">

            <item
                android:id="@+id/navigation11"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/firstMenuTitle" />

            <item
                android:id="@+id/navigation12"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/secondMenuTitle" />

            <item
                android:id="@+id/navigation13"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/thirdMenuTitle" />

        </menu>

    </item>

</menu>